fix undertow testLatestDeps